--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
+Limo is fork of Limonade.
+
 Limonade was designed and developed by Fabrice Luraine <http://www.asciiland.net/>.
 The limonade logo and other design stuffs were created by MiniMau <http://www.minimau.com>.
 
